<resources>
    <string name="app_name">미니 가계부</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="outlay">지출</string>
    <string name="inlay">수입</string>
    <string name="setting">설정</string>
    <string name="goal">목표</string>
    <string name="budget">예산</string>
    <string name="won">₩</string>
    <string name="budget_setting">예산 설정</string>
    <string name="budget_cycle_setting">예산 주기 설정</string>
    <string name="budget_cycle_setting_title">예산 주기 (1~31)</string>
    <string name="budget_value">예산 금액</string>
    <string name="goal_setting">목표 설정</string>
    <string name="goal_value">목표 금액</string>
    <string name="money_setting">자산 설정</string>
    <string name="money_value">자산 금액</string>

    <string name="end">완료</string>
    <string name="date">날짜</string>

    <string name="category">카테고리</string>
    <!--카테고리-->
    <string name ="house">주거/통신</string>
    <string name ="hobby">취미</string>
    <string name ="change">잔액 수정</string>
    <string name ="etc">기타</string>
    <string name ="event">경조사</string>
    <string name ="food">식비</string>
    <string name ="pocket_money">용돈</string>
    <string name ="traffic">교통비</string>
    <string name ="culture">문화생활</string>
    <string name ="fashion">패션/미용</string>
    <string name ="income">월급</string>
    <string name ="extra_income">부수입</string>
    <string name ="finance">금융 소득</string>
    <string name ="refund">환급</string>

    <string name ="csv_save">CSV 저장</string>
    <string name ="csv_load">CSV 불러오기</string>

    <string name="no">취소</string>
    <string name="yes">확인</string>
    <string name="memo">메모</string>
    <string name="no_budget">예산 제외</string>
    <string name="yes_budget">예산 포함</string>
    <string name="budget_cycle">예산 주기</string>

    <string name="budget_charge">예산 금액</string>
    <string name="goal_charge">목표 금액</string>
    <string name="budget_plus">예산 PLUS</string>
    <string name="start_init">초기 설정</string>
    <string name="log_search">로그 검색</string>
    <string name="search_result">검색 결과</string>

    <string name="budget_question">예산에서 제외 하시겠습니까?</string>
    <string name="reset_question">모든 데이터를 초기화 하시겠습니까?</string>


    <string name="admob_app_id">ca-app-pub-5800467535204514~5224977721</string>
    <string name="banner_ad_unit_id">ca-app-pub-5800467535204514/8868160522</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-5800467535204514/8868160522</string>-->

</resources>