<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Fragment"
    tools:context=".activity.InitActivity"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:id="@+id/toolbar"
            android:layout_height="?actionBarSize">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_init"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/money_setting"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/white_gray"/>
        <LinearLayout
            android:id="@+id/ll_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="20dp"
                android:text="@string/money_value"/>
            <TextView
                android:id="@+id/tv_init_money_value"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="₩0"
                android:textColor="@color/siam"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/white_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/goal_setting"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/white_gray"/>
        <LinearLayout
            android:id="@+id/ll_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="20dp"
                android:text="@string/goal_value"/>
            <TextView
                android:id="@+id/tv_init_goal_value"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="₩0"
                android:textColor="@color/siam"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/white_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/budget_setting"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/white_gray"/>
        <LinearLayout
            android:id="@+id/ll_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="20dp"
                android:text="@string/budget_value"/>
            <TextView
                android:id="@+id/tv_init_budget_value"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="₩0"
                android:textColor="@color/siam"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/white_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <Button
                android:id="@+id/btn_init_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_siam"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:text="@string/end"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
