<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Fragment"
    tools:context=".activity.BudgetPlusActivity">

        <com.google.android.material.appbar.AppBarLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:theme="@style/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:id="@+id/toolbar"
                    android:layout_height="?actionBarSize">
                        <ImageButton
                            android:id="@+id/btn_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/siam"
                            android:src="@drawable/ic_left"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/log_search"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_gravity="center"/>
                </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/cv_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintTop_toTopOf="parent">
                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:padding="20dp"
                                            android:orientation="vertical">
                                                <androidx.constraintlayout.widget.ConstraintLayout
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:orientation="horizontal">
                                                        <TextView
                                                            android:id="@+id/tv_date"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            app:layout_constraintLeft_toLeftOf="parent"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent"
                                                            android:textSize="20dp"
                                                            android:textStyle="bold"
                                                            android:text="@string/date"/>
                                                        <androidx.appcompat.widget.SwitchCompat
                                                            android:id="@+id/switch_date"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            app:track="@drawable/switch_track_selector"
                                                            android:thumb="@drawable/switch_thumb_selector"
                                                            app:layout_constraintRight_toRightOf="parent"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent" />
                                                </androidx.constraintlayout.widget.ConstraintLayout>
                                                <androidx.constraintlayout.widget.ConstraintLayout
                                                    android:id="@+id/cl_date"
                                                    android:layout_marginTop="10dp"
                                                    android:layout_gravity="center"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:orientation="horizontal"
                                                    android:gravity="center"
                                                    android:visibility="gone">
                                                        <TextView
                                                            android:id="@+id/tv_first_date"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            android:padding="5dp"
                                                            app:layout_constraintLeft_toLeftOf="parent"
                                                            app:layout_constraintRight_toLeftOf="@id/tv_sign"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent"
                                                            android:theme="@style/Button"
                                                            android:text="2022-10-12"/>
                                                        <TextView
                                                            android:id="@+id/tv_sign"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            android:layout_marginStart="10dp"
                                                            android:layout_marginEnd="10dp"
                                                            app:layout_constraintRight_toLeftOf="@id/tv_second_date"
                                                            app:layout_constraintLeft_toRightOf="@id/tv_first_date"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent"
                                                            android:text="~"/>
                                                        <TextView
                                                            android:id="@+id/tv_second_date"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            android:padding="5dp"
                                                            app:layout_constraintRight_toRightOf="parent"
                                                            app:layout_constraintLeft_toRightOf="@id/tv_sign"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent"
                                                            android:theme="@style/Button"
                                                            android:text="2022-12-12"/>
                                                </androidx.constraintlayout.widget.ConstraintLayout>

                                        </LinearLayout>

                                </androidx.cardview.widget.CardView>
                                <androidx.cardview.widget.CardView
                                    android:id="@+id/cv_category"
                                    android:layout_marginTop="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintTop_toBottomOf="@id/cv_date">
                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:padding="20dp"
                                            android:orientation="vertical">
                                                <androidx.constraintlayout.widget.ConstraintLayout
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:orientation="horizontal">
                                                        <TextView
                                                            android:id="@+id/tv_category"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            app:layout_constraintLeft_toLeftOf="parent"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent"
                                                            android:textSize="20dp"
                                                            android:textStyle="bold"
                                                            android:text="@string/category"/>
                                                        <androidx.appcompat.widget.SwitchCompat
                                                            android:id="@+id/switch_category"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            app:track="@drawable/switch_track_selector"
                                                            android:thumb="@drawable/switch_thumb_selector"
                                                            app:layout_constraintRight_toRightOf="parent"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent" />
                                                </androidx.constraintlayout.widget.ConstraintLayout>
                                                <androidx.constraintlayout.widget.ConstraintLayout
                                                    android:id="@+id/cl_category"
                                                    android:layout_marginTop="10dp"
                                                    android:layout_gravity="center"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:orientation="horizontal"
                                                    android:gravity="center"
                                                    android:visibility="gone">
                                                        <TextView
                                                            android:layout_width="match_parent"
                                                            android:layout_height="match_parent"
                                                                android:textSize="200dp"
                                                                android:text="테스틍비니다"/>
                                                </androidx.constraintlayout.widget.ConstraintLayout>

                                        </LinearLayout>

                                </androidx.cardview.widget.CardView>
                                <androidx.cardview.widget.CardView
                                    android:id="@+id/cv_memo"
                                    android:layout_marginTop="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintTop_toBottomOf="@id/cv_category"
                                    app:layout_constraintBottom_toTopOf="@id/barrier">
                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:padding="20dp"
                                            android:orientation="vertical">
                                                <androidx.constraintlayout.widget.ConstraintLayout
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:orientation="horizontal">
                                                        <TextView
                                                            android:id="@+id/tv_memo"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            app:layout_constraintLeft_toLeftOf="parent"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent"
                                                            android:textSize="20dp"
                                                            android:textStyle="bold"
                                                            android:text="@string/memo"/>
                                                        <androidx.appcompat.widget.SwitchCompat
                                                            android:id="@+id/switch_memo"
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            app:track="@drawable/switch_track_selector"
                                                            android:thumb="@drawable/switch_thumb_selector"
                                                            app:layout_constraintRight_toRightOf="parent"
                                                            app:layout_constraintTop_toTopOf="parent"
                                                            app:layout_constraintBottom_toBottomOf="parent" />
                                                </androidx.constraintlayout.widget.ConstraintLayout>
                                                <androidx.constraintlayout.widget.ConstraintLayout
                                                    android:id="@+id/cl_memo"
                                                    android:layout_marginTop="10dp"
                                                    android:layout_gravity="center"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:orientation="horizontal"
                                                    android:gravity="center"
                                                    android:visibility="gone">
                                                </androidx.constraintlayout.widget.ConstraintLayout>

                                        </LinearLayout>

                                </androidx.cardview.widget.CardView>
                                <TextView
                                    android:id="@+id/barrier"
                                    android:layout_marginTop="10dp"
                                    app:layout_constraintTop_toBottomOf="@id/cv_memo"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="10dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background= "@drawable/btn_siam"
                    android:textColor="@color/white"
                    android:text="@string/yes" />
                </LinearLayout>
        </FrameLayout>



</LinearLayout>